--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,7 @@ html {
 
 header{
     box-shadow: 21px 22px 10px 5px #000000;width: 100%;
-    height: 100px;
+    height: 180px;
     background-color: blue;
     color: white;}
 footer {
@@ -22,7 +22,8 @@ box-shadow: 21px -8px 10px 5px #000000;
 }
 
 h1 {color:white;
-    text-align: center;}
+    text-align: center;
+    }
 h2{
  text-align: center;
  text-decoration: underline;
